fix cutoff in print version

--- a/themes/remark-academic/static/css/prog-courses.css
+++ b/themes/remark-academic/static/css/prog-courses.css
@@ -47,10 +47,10 @@ img {
 */
 @media print {
   .remark-slide-scaler {
-    left: 5vw !important;
-    width: 90vw !important;
-    top: 5vh !important;
-    height: 90vh !important;
+    left: 3vw !important;
+    width: 94vw !important;
+    top: 3vh !important;
+    height: 94vh !important;
     transform: scale(1) !important;
   }
 }
